<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/textViewCityName"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/poslednja_nedelja_str"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/dan_str"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/temperatura_str"
            android:textSize="10sp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pritisak_str"
            android:textSize="10sp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vlaznost_str"
            android:textSize="10sp"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="8">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ponedeljak_str"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPonedeljak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/utorak_str"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewUtorak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sreda_str"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSreda"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/cetvrak_str"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewCetvrtak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/petak_str"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPetak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/subota_str"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSubota"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nedelja_str"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewNedelja"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="8">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPonedeljakTemperatura"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewUtorakTemperatura"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSredaTemperatura"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewCetvrtakTemperatura"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPetakTemperatura"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSubotaTemperatura"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewNedeljaTemperatura"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="8">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPonedeljakPritisak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewUtorakPritisak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSredaPritisak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewCetvrtakPritisak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPetakPritisak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSubotaPritisak"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewNedeljaPritisak"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="8">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPonedeljakVlaznost"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewUtorakVlaznost"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSredaVlaznost"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewCetvrtakVlaznost"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewPetakVlaznost"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewSubotaVlaznost"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/textViewNedeljaVlaznost"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/min_temperatura_str"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/colorBlack"
            android:id="@+id/textViewMinTemperaturaDan"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/colorBlack"
            android:id="@+id/textViewMinTemperaturaVrednost"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/max_temperatura_str"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/colorBlack"
            android:id="@+id/textViewMaxTemperaturaDan"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/colorBlack"
            android:id="@+id/textViewMaxTemperaturaVrednost"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:weightSum="4">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:id="@+id/imageButtonCold"
            android:background="@drawable/cold_button"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:id="@+id/imageButtonWarm"
            android:background="@drawable/warm_button"/>
    </LinearLayout>
</LinearLayout>